--- a/src/app/login/login-mobile-home/login-mobile-home.page.html
+++ b/src/app/login/login-mobile-home/login-mobile-home.page.html
@@ -1,13 +1,72 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>login-mobile-home</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content>
+  <ion-grid class="h-100 login-block">
+    <ion-row class="logo-row margin-m5">
+      <ion-col class="content-center">
+        <label class="header-t1 fc-black"><b>Ceylon Doc</b></label>
+      </ion-col>
+    </ion-row>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">login-otp-home</ion-title>
-    </ion-toolbar>
-  </ion-header>
+    <ion-row class="margin-m5">
+      <ion-col class="content-center">
+        <label class="content-t1 fc-black"
+          >Please enter your registered Mobile Number to continue to your
+          account</label
+        >
+      </ion-col>
+    </ion-row>
+
+    <ion-row class="center-img margin-m2">
+      <form [formGroup]="loginForm">
+        <div class="mobile-box">
+          <div class="mobile-box-icon center-img">
+            <img
+              src="{{country_img}}"
+              cache-img="country_img"
+              style="height: 3vh"
+            />
+          </div>
+          <div class="mobile-box-text vertical-center-img">
+            <!-- <ion-input></ion-input> -->
+            <ion-input
+              class="input-t1"
+              type="tel"
+              maxlength="13"
+              placeholder="(070)123-1234"
+              mask="(***)***-****"
+              formControlName="username"
+              clearInput
+            ></ion-input>
+          </div>
+          <div class="mobile-box-btn center-img" (click)="getOTP()">
+            <img
+              src="{{login_img}}"
+              cache-img="login_img"
+              class="login-btn-icon"
+            />
+          </div>
+        </div>
+      </form>
+    </ion-row>
+
+    <ion-row class="margin-m2">
+      <ion-col class="content-center">
+        <label class="content-t1 fc-black"
+          >Don’t have an account? <b>Register</b></label
+        >
+      </ion-col>
+    </ion-row>
+
+    <!-- <br><br><br><br> -->
+
+    <!-- <ion-row class="center-img" style="margin-top: 20vh;">
+      <div class="call-box">
+        <div class="call-box-btn center-img">
+          <ion-icon style="font-size: 48px;" color="light" name="information"></ion-icon>
+        </div>
+        <div class="call-box-text">
+          <h5 class="fc-black">Having Trouble? Talk to Us!</h5>
+        </div>
+      </div>
+    </ion-row> -->
+  </ion-grid>
 </ion-content>
