Updated appointments page

--- a/src/app/appointments/appointments.page.html
+++ b/src/app/appointments/appointments.page.html
@@ -1,18 +1,16 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button auto-hide="false"></ion-menu-button>
-    </ion-buttons>
-    <ion-buttons slot="end">
-      <ion-button> 
-        <ion-icon aria-hidden="true" name="settings"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
-
+<app-header></app-header>
 <ion-content>
   <ion-searchbar></ion-searchbar>
+ <ion-row>
+  <ion-list>
+    <ion-item>
+      <ion-select aria-label="Doctors" interface="popover" placeholder="Choose Doctor">
+        <ion-select-option value="apples">Doc 1</ion-select-option>
+        <ion-select-option value="oranges">Doc 2</ion-select-option>
+      </ion-select>
+    </ion-item>
+  </ion-list>
+  
   <ion-list>
     <ion-item>
       <ion-select aria-label="Days" interface="popover" placeholder="Choose Date">
@@ -21,20 +19,23 @@
       </ion-select>
     </ion-item>
   </ion-list>
+ </ion-row>
   <ion-card class="app-card">
     <ion-card-header>
-      <ion-card-title>Date and Time</ion-card-title>
-      <ion-card-subtitle>Name</ion-card-subtitle>
-      <ion-card-subtitle>Age</ion-card-subtitle>
+      <ion-card-title>Raashid | 25 yrs</ion-card-title>
+      <!-- <ion-card-subtitle>Name</ion-card-subtitle>
+      <ion-card-subtitle>Age</ion-card-subtitle> -->
     </ion-card-header>
-  
-    <ion-card-content>
+    <ion-chip color="primary">2023-06-14 | 10.00 a.m.</ion-chip>
+    <ion-chip color="tertiary">Rs. 500</ion-chip>
+    <!-- <ion-card-content>
       Payment
-    </ion-card-content>
+    </ion-card-content> -->
   
     <ion-button fill="clear" class="decline-btn">
       <ion-icon aria-hidden="true" name="close"></ion-icon>
-      Decline
+      Decline Appointment
     </ion-button>
   </ion-card>
+  
 </ion-content>
