--- a/src/app/appointments/appointments.page.scss
+++ b/src/app/appointments/appointments.page.scss
@@ -1,3 +1,11 @@
+.app-card{
+    background: #e6eefa;
+}
 .decline-btn{
     color: red;
 }
+
+// ion-chip {
+//     --background: #89b6f5;
+//     --color: white;
+//   }
