Added user login

--- a/src/app/appointments/appointments.page.scss
+++ b/src/app/appointments/appointments.page.scss
@@ -1,9 +1,14 @@
 .app-card{
     background: #e6eefa;
 }
-.decline-btn{
-    color: red;
+.complete-btn{
+    color: green;
 }
+
+// .image-btns{
+//     height: 40px;
+//     width:40px;
+// }
 
 // ion-chip {
 //     --background: #89b6f5;
