--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,6 +7,28 @@
       <ion-button> 
         <ion-icon aria-hidden="true" name="settings"></ion-icon>
       </ion-button>
+      <ion-button id="present-alert"> 
+        <ion-icon aria-hidden="true" name="log-out"></ion-icon>
+      </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
+
+<ion-alert
+  trigger="present-alert"
+  header="Logout"
+  message="Are sure you want to logout?"
+  [buttons]="alertButtons"
+></ion-alert>
+
+<ion-menu contentId="main-content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>Menu Content</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content class="ion-padding">This is the menu content.</ion-content>
+</ion-menu>
+<div class="ion-page" id="main-content">
+  <ion-content class="ion-padding"> Tap the button in the toolbar to open the menu. </ion-content>
+</div>
