--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -6,12 +6,12 @@
       <ion-label>Appointments</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="payments">
+    <!-- <ion-tab-button tab="payments">
       <ion-icon aria-hidden="true" name="cash"></ion-icon>
       <ion-label>Payments</ion-label>
     </ion-tab-button>
 
-    <!-- <ion-tab-button tab="tab3">
+    <ion-tab-button tab="tab3">
       <ion-icon aria-hidden="true" name="square"></ion-icon>
       <ion-label>Tab 3</ion-label>
     </ion-tab-button> -->
