Added viewing appointments

--- a/src/app/login/login-mobile-home/login-mobile-home.page.html
+++ b/src/app/login/login-mobile-home/login-mobile-home.page.html
@@ -2,12 +2,13 @@
   <ion-grid class="h-100 login-block">
     <ion-row class="logo-row margin-m5">
       <ion-col class="content-center">
-        <label class="header-t1 fc-black"><b>Ceylon Doc</b></label>
+        <img src="../../../assets/CeylonDocLogo.png" cache-img="logo_img" style="height: 30vh;"/>
       </ion-col>
     </ion-row>
-
     <ion-row class="margin-m5">
       <ion-col class="content-center">
+        <label class="header-t1 fc-black"><b>Assistant</b></label>
+        <br><br>
         <label class="content-t1 fc-black"
           >Please enter your registered Mobile Number to continue to your
           account</label
