--- a/src/app/login/login-otp-home/login-otp-home.page.html
+++ b/src/app/login/login-otp-home/login-otp-home.page.html
@@ -2,12 +2,14 @@
   <ion-grid class="h-100 login-block">
     <ion-row class="logo-row m5">
       <ion-col class="content-center">
-        <label class="header-t1 fc-black"><b>Ceylon Doc</b></label>
+        <img src="../../../assets/CeylonDocLogo.png" cache-img="logo_img" style="height: 30vh;"/>
       </ion-col>
     </ion-row>
-
+<br>
     <ion-row class="margin-m5">
       <ion-col class="content-center">
+        <label class="header-t1 fc-black"><b>Assistant</b></label>
+        <br><br>
         <label class="header-t1 fc-black"><b>Hello again!</b></label>
       </ion-col>
     </ion-row>
