--- a/src/app/appointments/appointments.page.html
+++ b/src/app/appointments/appointments.page.html
@@ -1,41 +1,33 @@
 <app-header></app-header>
 <ion-content>
+  <br>
   <ion-searchbar></ion-searchbar>
- <ion-row>
-  <!-- <ion-list>
-    <ion-item>
-      <ion-select aria-label="Doctors" interface="popover" placeholder="Choose Doctor">
-        <ion-select-option value="Doc 1">Doc 1</ion-select-option>
-        <ion-select-option value="Doc 2">Doc 2</ion-select-option>
-      </ion-select>
-    </ion-item>
-  </ion-list> -->
-  
-  <ion-list>
-    <ion-item>
-      <ion-select aria-label="Days" interface="popover" placeholder="Choose Date">
-        <ion-select-option value="Today">Today</ion-select-option>
-        <ion-select-option value="All">All</ion-select-option>
-      </ion-select>
-    </ion-item>
-  </ion-list>
- </ion-row>
 
-  <ion-card class="app-card">
+ <!-- <ion-row>
+  <br>
+  <ion-button id="datetime">Choose Date:</ion-button>
+<ion-modal [keepContentsMounted]="true" trigger="datetime">
+  <ng-template>
+    <ion-datetime displayFormat="YYYY-MM-DD" pickerOptions="{ mode: 'date' }"></ion-datetime>
+  </ng-template>
+</ion-modal>
+ </ion-row> -->
+
+  <ion-card class="app-card" *ngFor="let appointment of appointmentList">
     <ion-card-header>
-      <ion-card-title>Raashid | 25 yrs  
+      <ion-card-title>{{appointment.animal_name}} | {{appointment.pet_age}} yrs 
         <ion-chip color="primary">
         <ion-icon aria-hidden="true" name="call"></ion-icon>
         &nbsp;
-        0714564568
+        {{appointment.mobile}}
       </ion-chip>
     </ion-card-title>
       <!-- <ion-card-subtitle>Name</ion-card-subtitle>
       <ion-card-subtitle>Age</ion-card-subtitle> -->
     </ion-card-header>
-    <ion-chip color="primary">2023-06-14 | 10.00 a.m.</ion-chip>
+    <ion-chip color="primary">{{appointment.a_date}} | {{appointment.a_time}}</ion-chip>
    
-    <ion-chip color="tertiary">Rs. 500</ion-chip>
+    <ion-chip color="tertiary">Rs.{{appointment.a_charge + appointment.a_payment}}</ion-chip>
     <ion-card-content>
       <ion-button class="image-btns" fill="solid" (click)="selectCamera()">
         <ion-icon fill="clear" name="camera"></ion-icon>
@@ -43,10 +35,10 @@
       <ion-button class="image-btns" fill="solid" (click)="selectPhotos()">
         <ion-icon fill="clear" name="image"></ion-icon>
       </ion-button>
-      <ion-button fill="clear" class="complete-btn" color="tertiary" fill="solid">
+      <!-- <ion-button fill="clear" class="complete-btn" color="tertiary" fill="solid">
         <ion-icon aria-hidden="true" name="checkmark"></ion-icon>
          Complete <br> Appointment
-      </ion-button>
+      </ion-button> -->
     </ion-card-content>
    
   </ion-card>
