--- a/src/app/login/select-doctor/select-doctor.page.scss
+++ b/src/app/login/select-doctor/select-doctor.page.scss
@@ -1,5 +1,5 @@
 .h-100{
-    height: 100vh;
+    height: 1080px;
 }
 
 .login-block {
@@ -106,4 +106,12 @@
     align-items: center;
     justify-content: center;
 }
+
+.doctor-card{
+    width: 96%;
+}
+
+ion-card.clicked {
+    background-color: red; /* Set your desired color here */
+  }
 
